# zksync-airbender

./: Cargo.toml  RISCV_EMULATOR_NOTES.md  build_run.sh  recreate_verifiers.sh  rust-toolchain.toml
.github/workflows/: update-verifiers.yml
blake2s_u32/: Cargo.toml
blake2s_u32/src/: state_with_extended_control.rs
circuit_defs/prover_examples/: Cargo.toml
circuit_defs/setups/: Cargo.toml
cs/: Cargo.toml
docs/: subarguments_used.md  understanding_ram_argument.md
execution_utils/: Cargo.toml
execution_utils/src/: recursion.rs  unrolled.rs  unrolled_gpu.rs
full_statement_verifier/: Cargo.toml
full_statement_verifier/src/: lib.rs  unified_circuit_statement.rs  unrolled_proof_statement.rs
gpu_prover/native/: stage3.cu
gpu_prover/src/: tests.rs
gpu_prover_test/src/: main.rs
prover/: Cargo.toml
prover/src/: tracer.rs
risc_v_simulator/: Cargo.toml
risc_v_simulator/src/: lib.rs  signature_extraction.rs
riscv_common/src/: boot_sequence.rs  lib.rs
riscv_transpiler/: Cargo.toml
riscv_transpiler/src/: act.rs  lib.rs  riscof.rs  run.rs
tools/cli/: Cargo.toml
tools/reproduce/: Dockerfile  reproduce.sh
tools/verifier/: Cargo.toml  base_layer.reduced.vk.json  build.sh  recursion_in_unified_layer.elf  recursion_in_unified_layer.text  recursion_in_unified_layer_security_100_bits.elf  recursion_in_unified_layer_security_100_bits.text  recursion_in_unrolled_layer.text  recursion_in_unrolled_layer_security_100_bits.text  recursion_layer.reduced.vk.json  (+3 more)
verifier/: Cargo.toml
verifier_common/: Cargo.toml
witness_eval_generator/: Cargo.toml
(+89 files in other folders)
