[package]
name = "execution_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
verifier_common = { workspace = true, features = ["proof_utils", "replace_csr"] }
riscv_common = { workspace = true }
risc_v_simulator = { workspace = true, features = ["delegation"] }
riscv_transpiler = { workspace = true }
trace_and_split = { workspace = true }
setups = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "*"

[dev-dependencies]
bincode = { version = "1.3" }
prover_examples = { path = "../circuit_defs/prover_examples" }
full_statement_verifier = { path = "../full_statement_verifier" }

[features]
verifier_binaries = []
# Will evaluate quotient on main domain for debug
debug_satisfiable = ["prover_examples/debug_satisfiable"]
# Will perform satisfiability tests on witness
precheck_satisfied = ["prover_examples/precheck_satisfied"]
extended_tests = []
# debug = ["prover_examples/precheck_satisfied", "prover_examples/debug_satisfiable"]
default = []
# default = ["extended_tests"]